--- a/templates/dash.html
+++ b/templates/dash.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <!-- Link to Separate Dashboard CSS -->
-<link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dash.css') }}">
 
 <div class="container-fluid dashboard-container" data-aos="fade-in">
     
@@ -258,3 +258,4 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 {% endblock %}
+
