--- a/templates/dash.html
+++ b/templates/dash.html
@@ -1,6 +1,6 @@
 {% extends "admin_master.html" %}
 
-{% block content %}
+{% block page_content %}
 <!-- Link to Separate Dashboard CSS -->
 <link rel="stylesheet" href="{{ url_for('static', filename='css/dash.css') }}">
 
@@ -258,4 +258,5 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 </script>
 {% endblock %}
+
 
